--- a/practice/04_unit_test_automation/pipeline.yaml
+++ b/practice/04_unit_test_automation/pipeline.yaml
@@ -1,35 +1,41 @@
+# Define a Pipeline resource in the Tekton API group
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
-metadata:  
+metadata:
+  # Name of the pipeline
   name: cd-pipeline
 spec:
+  # Define workspaces used by the pipeline
+  # Workspaces in Tekton are shared storage volumes that tasks within a pipeline can access
   workspaces:
-    - name: pipeline-workspace
-  params:
-    - name: repo-url
-    - name: branch
-      default: master
-  tasks:
-    - name: init
-      workspaces:
-        - name: source
-          workspace: pipeline-workspace          
-      taskRef:
-        name: cleanup
+    - name: pipeline-workspace  # Name of the workspace
 
-    - name: clone
+  # Define parameters that can be passed to the pipeline
+  params:
+    - name: repo-url  # URL of the git repository
+    - name: branch  # Name of the branch to use
+      default: "master"  # Default branch if not provided
+
+  # Define the tasks that will be part of the pipeline
+  tasks:
+    - name: init  # Name of the task within the pipeline
+    workspaces:
+      - name: source  # Name of the workspace as referred to in this task
+        workspace: pipeline-workspace  # Reference to the pipeline-level workspace
+    taskRef:
+      name: cleanup  # Reference to an existing Task resource named 'cleanup'
+        
+    - name: clone  # Name of the task
       workspaces:
-        - name: output
-          workspace: pipeline-workspace          
+        - name: output  # Name of the workspace within the task
+          workspace: pipeline-workspace  # Reference to the pipeline-level workspace
       taskRef:
-        name: git-clone
+        name: git-clone  # Reference to a Task resource, here it is 'git-clone' which should be defined separately
       params:
-      - name: url
-        value: $(params.repo-url)
-      - name: revision
-        value: $(params.branch)
-      runAfter:
-        - init      
+        - name: url  # Parameter for the git URL
+          value: $(params.repo-url)  # Use the repo-url parameter from the pipeline
+        - name: revision  # Parameter for the git revision (branch, tag, commit)
+          value: $(params.branch)  # Use the branch parameter from the pipeline
 
     - name: lint
       taskRef:
