add the nose task to the pipeline

--- a/practice/04_unit_test_automation/pipeline.yaml
+++ b/practice/04_unit_test_automation/pipeline.yaml
@@ -52,14 +52,18 @@ spec:
       runAfter:
         - clone  # This task will run after the 'clone' task
 
-    - name: tests
+    - name: tests  # Name of this task
+      workspaces:
+        - name: source  # Name of the workspace as referred to in this task
+          workspace: pipeline-workspace  # Reference to the pipeline-level workspace
       taskRef:
-        name: echo
+        name: nose  # Reference to a Task resource named 'nose'
       params:
-      - name: message
-        value: "Running unit tests with PyUnit..."
+        - name: args  # Parameter for specifying the arguments to pass to the nose task
+          value: "-v --with-spec --spec-color"  # The value of the arguments, enabling verbose output, specification formatting, and color
       runAfter:
-        - lint
+        - lint  # Specifies that this 'tests' task should run after the 'lint' task has completed
+
 
     - name: build
       taskRef:
